{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 66,
  "lineage": "f81f265e-e366-aef4-b0a9-1921113c9e16",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0c84db9e0ac08dc8a",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0c84db9e0ac08dc8a",
            "ingress": [],
            "name": "moz-health-qa20230325090847585900000015",
            "name_prefix": "moz-health-qa",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "moz-health-qa-eks_cluster_sg",
              "kubernetes.io/cluster/moz-health-qa": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "moz-health-qa-eks_cluster_sg",
              "kubernetes.io/cluster/moz-health-qa": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0515e711eaf35d664",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0515e711eaf35d664",
            "ingress": [],
            "name": "moz-health-qa20230325090847587800000016",
            "name_prefix": "moz-health-qa",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "moz-health-qa-eks_worker_sg",
              "kubernetes.io/cluster/moz-health-qa": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "moz-health-qa-eks_worker_sg",
              "kubernetes.io/cluster/moz-health-qa": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2728982499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c84db9e0ac08dc8a",
            "security_group_rule_id": "sgr-06f91c61807cacdc0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-975007507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c84db9e0ac08dc8a",
            "security_group_rule_id": "sgr-0dad3760650bb3d22",
            "self": false,
            "source_security_group_id": "sg-0515e711eaf35d664",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-142950333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0515e711eaf35d664",
            "security_group_rule_id": "sgr-0144ff4be5305a117",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3878483103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0515e711eaf35d664",
            "security_group_rule_id": "sgr-0c548b5d7d2c34ce7",
            "self": false,
            "source_security_group_id": "sg-0c84db9e0ac08dc8a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3762782409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0515e711eaf35d664",
            "security_group_rule_id": "sgr-067fe85e2d0dea275",
            "self": false,
            "source_security_group_id": "sg-0c84db9e0ac08dc8a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-559540134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0515e711eaf35d664",
            "security_group_rule_id": "sgr-0bc2d74bfd845bfe7",
            "self": false,
            "source_security_group_id": "sg-0515e711eaf35d664",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c25dc8eef609049e",
            "domain": "vpc",
            "id": "eipalloc-0c25dc8eef609049e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-93-107.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.93.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "eip-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "eip-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:internet-gateway/igw-09c6abe42914fcb67",
            "id": "igw-09c6abe42914fcb67",
            "owner_id": "680148267093",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c25dc8eef609049e",
            "connectivity_type": "public",
            "id": "nat-0254e46b6cefbb512",
            "network_interface_id": "eni-02806c72a9a7db220",
            "private_ip": "192.168.0.205",
            "public_ip": "13.235.93.107",
            "subnet_id": "subnet-0aa36ae93fc7ef537",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "nat-gw-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "nat-gw-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:route-table/rtb-0a7281e726cd43732",
            "id": "rtb-0a7281e726cd43732",
            "owner_id": "680148267093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0254e46b6cefbb512",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "private-moz-health-qa-rtb",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "private-moz-health-qa-rtb",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:route-table/rtb-0b8c5c80e8255878a",
            "id": "rtb-0b8c5c80e8255878a",
            "owner_id": "680148267093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c6abe42914fcb67",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "public-moz-health-qa-rtb",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "public-moz-health-qa-rtb",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5763513027b291",
            "route_table_id": "rtb-0a7281e726cd43732",
            "subnet_id": "subnet-0fa453f1cb3695cca"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aeb07c4013f8fd7",
            "route_table_id": "rtb-0a7281e726cd43732",
            "subnet_id": "subnet-01a7f0b7a595daacf"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa6f9b0cb4b927b",
            "route_table_id": "rtb-0b8c5c80e8255878a",
            "subnet_id": "subnet-0aa36ae93fc7ef537"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01238d47acf14e55c",
            "route_table_id": "rtb-0b8c5c80e8255878a",
            "subnet_id": "subnet-02d7ec32d787715fd"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0d676d0c18d7f23de",
            "description": "Master nodes security group",
            "egress": [],
            "id": "sg-0d676d0c18d7f23de",
            "ingress": [],
            "name": "masters-moz-health-qa",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "masters-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "masters-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0c83bab6ee83c3ccf",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-0c83bab6ee83c3ccf",
            "ingress": [],
            "name": "db-moz-health-qa",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-moz-health-qa"
            },
            "tags_all": {
              "Name": "db-moz-health-qa"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-013df97bd2d1d695d",
            "description": "Security group for all worker nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013df97bd2d1d695d",
            "ingress": [],
            "name": "nodes-moz-health-qa",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "nodes-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "nodes-moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_egress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to worker nodes",
            "from_port": 10250,
            "id": "sgrule-1299256829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d676d0c18d7f23de",
            "security_group_rule_id": "sgr-0f8d5347acb48b8f7",
            "self": false,
            "source_security_group_id": "sg-013df97bd2d1d695d",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API server",
            "from_port": 443,
            "id": "sgrule-1587954948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d676d0c18d7f23de",
            "security_group_rule_id": "sgr-0516e48d68a90ebe2",
            "self": false,
            "source_security_group_id": "sg-013df97bd2d1d695d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-1191332862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c83bab6ee83c3ccf",
            "security_group_rule_id": "sgr-0417a00e9c80e4c14",
            "self": false,
            "source_security_group_id": "sg-013df97bd2d1d695d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2762403315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013df97bd2d1d695d",
            "security_group_rule_id": "sgr-092afd84c11bd2626",
            "self": false,
            "source_security_group_id": "sg-0d676d0c18d7f23de",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1915160465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-013df97bd2d1d695d",
            "security_group_rule_id": "sgr-023f9c414ee90171e",
            "self": false,
            "source_security_group_id": "sg-013df97bd2d1d695d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-0fa453f1cb3695cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa453f1cb3695cca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "ap-south-1b-moz-health-qa",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "ap-south-1b-moz-health-qa",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-01a7f0b7a595daacf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a7f0b7a595daacf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "ap-south-1a-moz-health-qa",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "ap-south-1a-moz-health-qa",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-0aa36ae93fc7ef537",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa36ae93fc7ef537",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "utility-ap-south-1b-moz-health-qa",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "utility-ap-south-1b-moz-health-qa",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-02d7ec32d787715fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d7ec32d787715fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "utility-ap-south-1a-moz-health-qa",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-qa",
              "Name": "utility-ap-south-1a-moz-health-qa",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03321ad8ddc3ec8e9"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:vpc/vpc-03321ad8ddc3ec8e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06f6809501d521a1b",
            "default_route_table_id": "rtb-03f31b14dd63400e1",
            "default_security_group_id": "sg-0b4b77254693cdbed",
            "dhcp_options_id": "dopt-5e994435",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03321ad8ddc3ec8e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f31b14dd63400e1",
            "owner_id": "680148267093",
            "tags": {
              "Name": "moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            },
            "tags_all": {
              "Name": "moz-health-qa",
              "kubernetes.io/cluster/moz-health-qa": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}